@@ -700,7 +700,12 @@ sub widget
         $widget->{'default'} = $winfo->{'default'};
         $widget->{'order'} = $winfo->{'order'};
         my $wfunc = $winfo->{'widget'};
-        &$wfunc($self, $widget, $winfo->{'parameter'});
+        try {
+            $wfunc->($self, $widget, $winfo->{'parameter'});
+        } catch ($ex) {
+            EBox::error("Error loading widget $name from module " . $self->name() . ": $ex");
+            return undef;
+        }
         return $widget;
     } else {
         return undef;
